[tool.poetry]
name = "spammerdiscordbot"
version = "0.1.0"
description = ""
authors = ["maxjiang2021 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
psutil = "^5.8.0"
python-dotenv = "^0.17.1"
replit = "^3.1.0"
"discord.py" = "^1.7.3"
discord-components = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
